--- a/index.html
+++ b/index.html
@@ -352,9 +352,10 @@
                 <!-- Education Section -->
                 <section id="education">
                     <h1>Education</h1>
-                    <h2>Purdue University – Honors College (West Lafayette, Graduated 2021)</h2>
+                    <h2>Purdue University, West Lafayette</h2>
+                    <h3>Honors College, Graduated 2021</h3>
                     <p>
-                        Bachelor of Science in Mechanical Engineering with a minor in Management.
+                        <strong>Bachelor of Science in Mechanical Engineering</strong> with a minor in Management.
                     </p>
                     <p>
                         <strong>Related Coursework:</strong> Thermodynamics, Mechanics, Programming Applications for
