--- a/index.html
+++ b/index.html
@@ -259,6 +259,7 @@
                   </section>
                   
                 <!-- Projects Section -->
+                <h1>Projects</h1>
                 <section id="beveragebot">
                     <h2>BeverageBot</h2>
                     <div class="project-content">
